--- a/frontendrest/src/pages/signup/signup.html
+++ b/frontendrest/src/pages/signup/signup.html
@@ -1,17 +1,8 @@
-<!--
-  Generated template for the SignupPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
     <ion-title>signup</ion-title>
   </ion-navbar>
-
 </ion-header>
-
 
 <ion-content padding>
  <ion-list>
@@ -19,16 +10,22 @@
     <ion-label floating>Username</ion-label>
     <ion-input [(ngModel)]='newcreds.name' type='text'></ion-input>
   </ion-item>
+
   <ion-item>
     <ion-label floating>Password</ion-label>
     <ion-input [(ngModel)]='newcreds.password' type='password'></ion-input>
   </ion-item>
 
-  <!-- <ion-item>
-    <ion-select floating placeholder="Choose Wireless Network">
-      <ion-option *ngFor="let network of networks" [(ngModel)]='newcreds.wifi_ssid'>{{network.SSID}}</ion-option>
+  <ion-item>
+    <ion-select floating placeholder="Choose Wireless Network" [(ngModel)]='newcreds.wifi_ssid' (ionChange)="setWifiCredentials(newcreds.wifi_ssid)">
+      <ion-option *ngFor="let network of networks" [value]="network.SSID">{{network.SSID}}</ion-option>
     </ion-select>
-  </ion-item> -->
+  </ion-item>
  </ion-list>
  <button ion-button (click)='register(newcreds)'>Register</button>
 </ion-content>
+
+<ion-item>
+  <ion-label floating >Wireless Password</ion-label>
+  <ion-input [(ngModel)]="newcreds.wifi_password" type="password" placeholder="enter password"></ion-input>
+</ion-item>
