--- a/frontendrest/src/pages/userpage/userpage.html
+++ b/frontendrest/src/pages/userpage/userpage.html
@@ -9,8 +9,10 @@
 
 <ion-content padding>
   <h2>NFConn</h2>
-  <!-- <p>Welcome {{user.name}}!</p>
-  <p>Current Wifi Network: {{user.wifi_ssid}}</p> -->
+  <div *ngIf="infobool">
+  <p>Welcome {{user.name}}!</p>
+  <p>Current Wifi Network: {{user.ssid}}</p>
+</div>
   <button ion-button (click)='logout()'>Logout</button>
   <button ion-button (click)='getInfo()'>GetInfo</button>
 </ion-content>
