updated routes to include getwifi()

--- a/frontendrest/src/pages/userpage/userpage.html
+++ b/frontendrest/src/pages/userpage/userpage.html
@@ -15,4 +15,5 @@
 </div>
   <button ion-button (click)='logout()'>Logout</button>
   <button ion-button (click)='getInfo()'>GetInfo</button>
+  <button ion-button (click)='getWifi()'>getWifiCreds</button>
 </ion-content>
