ready for final submission

--- a/frontendrest/src/pages/home/home.html
+++ b/frontendrest/src/pages/home/home.html
@@ -20,6 +20,7 @@
   <button ion-button (click)='login(usercreds)'>Login</button>
   <button ion-button (click)='signup()'>Sign up</button>
   <button ion-button (click)='guestPage()'>Recieve Wifi</button>
+  <button ion-button (click)='getqrPage()'>No NFC? QR</button>
   <hr>
   <img src="./assets/imgs/nfclogo.png">
   <hr>
