--- a/frontendrest/src/pages/userpage/userpage.html
+++ b/frontendrest/src/pages/userpage/userpage.html
@@ -13,8 +13,15 @@
     <p>Welcome {{ username }}!</p>
     <p>Current Wifi Network: {{ ssid }}</p>
   </div>
-  <img src="./assets/imgs/nfclogo.png">
+  <img *ngIf="!createdCode" src="./assets/imgs/nfclogo.png">
+  <ion-card *ngIf="createdCode">
+    <ngx-qrcode [qrc-value]="createdCode"></ngx-qrcode>
+    <ion-card-content>
+      <p>Value: {{ createdCode }}</p>
+    </ion-card-content>
+  </ion-card>
   <button ion-button (click)='logout()'>Logout</button>
   <button ion-button (click)='getInfo()'>GetInfo</button>
   <button ion-button (click)='getWifi()'>getWifiCreds</button>
+  <button ion-button full icon-left (click)="createCode()"><ion-icon name="barcode"></ion-icon>Create Code</button>
 </ion-content>
